center plus star

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     }
   </style>
 </head>
-<body>
+  <body>
+    <center>
+  <a href=""></a>
+  <br><br>
   <a href="Dispatches-From-the-Gaming-Closet.pdf">Dispatches From the Gaming Closet</a>
+     <br><br> <img src="star2.png">
+    </center>
 </body>
 </html>
