--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </head>
   <body>
     <center>
-  <a href=""></a>
   <br><br>
-  <a href="Dispatches-From-the-Gaming-Closet.pdf">Dispatches From the Gaming Closet</a>
-     <br><br> <img src="star2.png">
+  <a href="Dispatches-From-the-Gaming-Closet.pdf">Dispatches From the Gaming Closet</a><br><br>
+      Click the title above to download! <br><br>
+      <img src="star2.png">
     </center>
 </body>
 </html>
